@@ -7,10 +7,10 @@
     <groupId>dk.bringlarsen.exploration.java</groupId>
     <artifactId>java-exploration</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>jla-java-exploration</name>
+    <name>java-exploration</name>
 
     <properties>
-        <java.version>20</java.version>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.projectKey>jessbringlarsen_java-exploration</sonar.projectKey>
         <sonar.organization>jessbringlarsen-github</sonar.organization>
@@ -75,14 +75,6 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <enablePreview>true</enablePreview>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.2</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
